--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
+    "express-flash-message": "^2.1.0",
     "express-myconnection": "^1.0.4",
     "express-session": "^1.17.3",
     "md5": "^2.3.0",
